--- a/modules/Biblio-Authentication/Changes
+++ b/modules/Biblio-Authentication/Changes
@@ -1,4 +1,4 @@
-Revision history for Biblio-Authentication-L4U
+Revision history for Biblio-Authentication
 
 0.01    Date/time
         First version, released on an unsuspecting world.
