--- a/modules/Biblio-Authentication/Changes
+++ b/modules/Biblio-Authentication/Changes
@@ -1,5 +1,5 @@
 Revision history for Biblio-Authentication
 
-0.01    Date/time
-        First version, released on an unsuspecting world.
+0.02	 2015-04-17  Rolled SIP2 authentication into Biblio::Authentication
+0.01	 Date/time   First version, released on an unsuspecting world.
 
