--- a/modules/Biblio-Authentication/README
+++ b/modules/Biblio-Authentication/README
@@ -26,7 +26,7 @@ SUPPORT AND DOCUMENTATION
 After installing, you can find documentation for this module with the
 perldoc command.
 
-    perldoc Biblio::Authentication::L4U
+    perldoc Biblio::Authentication
 
 You can also look for information at:
 
